test/good/lambdas/lambda06.px

func call(f: ()->String): Void def
    print f()

call(lambda: "lambda")
