test/bad/functions/print01.px

func f(): Void def
    return

print f
